--- a/index.html
+++ b/index.html
@@ -16,24 +16,44 @@
     <link rel="stylesheet" href="./assets/style.css" />
 
     <!--Importation de Vue-->
+    <script src="https://unpkg.com/vue@3.5.12/dist/vue.global.js"></script>
   </head>
   <body>
-    <!--Point d'entrée de l'app Vue-->
-    <h1 style="color: green">You are READY for the workshop ;)</h1>
+    <div id="app">
+      <div class="container">
+        <div class="row">
+          <!--Point d'entrée de l'app Vue-->
+          <h1 style="color: green" class="col-8">{{title}}</h1>
 
-    <!--Bootstrap-->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+          <div class="col-4" :class="[cart.length > 0 ? 'cartFilled' : '']"> Panier({{ cart }})</div>
+          <div>Stock({{ stock }})</div>
 
-    <!--Notre JS contenant notre app Vue-->
-    <script src="./main.js"></script>
+          <product-display class="col-12" :premium="premium"  @add-to-cart="updateCart"></product-display>
+
+
+
+
+
+          <!--Bootstrap-->
+          <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"
+          ></script>
+          <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"
+          ></script>
+
+          <!--Notre JS contenant notre app Vue-->
+          <script src="./main.js"></script>
+          <script src="./components/ProductDisplay.js"></script>
+          <script>
+            const mountedApp = app.mount('#app');
+          </script>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
